# sight-singing-deck

./: .gitignore  ASSUMPTIONS.md  CURRICULUM.md  DICTATION_CURRICULUM.md  FIXED_AUDIO_CURRICULUM.md  KNOWN_ISSUES.md  MVP_PLAN.md  Makefile  PIANO_AUDIO_PLAN.md  README.md  RHYTHM_CURRICULUM.md  TRANSCRIPTION_MINIGAME_DESIGN.md  package-lock.json  package.json  playwright.config.mjs  playwright.webkit.config.mjs  pyproject.toml  sight_singing_deck_plan.md
.claude/: launch.json
.github/workflows/: anki-workbench.yml
assets/: _errordetect.js  _player.js  _renderer.js  _transcription.js  _transcription_debug_external.js  card_styles.css
debug/: anki-inject-emulation.html  curriculum-gallery.html  error-harness.html  harness.css  render-test.html  review-harness-compound.html  review-harness-dotted.html  review-harness-gmajor.html  review-harness-harmonic.html  review-harness-rhythm.html  review-harness-syncopation.html  review-harness-triplet.html  review-harness.html  rhythm-adv-gallery.html  rhythm-gallery.html  sing-harness.html  tie-triplet-test.html  transcription-harness-bass.html  transcription-harness-compound.html  transcription-harness-dotted.html  transcription-harness-harmonic.html  transcription-harness-multibar.html  transcription-harness-triplet.html  transcription-harness.html
release/: ankiweb.md  dictation-ankiweb.md  dictation.toml
scripts/: apply_dictation_deck_live.py  apply_live_template_update.py  build_curriculum_deck.py  build_deck.py  build_dictation_deck.py  build_notetype_smoke_deck.py  build_transcription_debug_deck.py  build_transcription_integration_debug_deck.py  dump_card_fixtures.py  export_dictation_specs.py
src/sight_singing/: __init__.py  anki_model.py  audio_assets.py  card_data.py  fixed_audio_curriculum.py  melodies.py  midi_writer.py  rhythm_curriculum.py  wav_synth.py
src/sight_singing/curriculum/: stages.py
src/sight_singing/generate/: errors.py  melody_gen.py  rhythm.py
src/sight_singing/theory/: scales.py
tests/: test_dictation_ladder.py  transcription-harness.spec.js  webkit-anki-injection.spec.js  webkit-global-setup.mjs
tests/gui_smoke/pointer/: pyproject.toml
tests/gui_smoke/pointer/probe_addon/: __init__.py
