[project]
name = "sight-singing-deck"
version = "0.1.0"
description = "Code-generated Anki deck for beginner sight singing (MVP)."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
deck = ["genanki>=0.13.0"]
dev = ["mypy>=1.13.0", "ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"scripts/build_deck.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
