[project]
name = "sight-singing-deck"
version = "0.1.0"
description = "Code-generated Anki deck for beginner sight singing (MVP)."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
deck = ["genanki>=0.13.0"]
dev = ["mypy>=1.13.0", "ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.pip]
exclude-newer = "7 days"

[tool.anki-addon-workbench]
project_name = "Sight Singing Deck"
seed_apkgs = [
  # notetype-smoke first: 8 cards spanning all THREE note types (Sing/Transcribe,
  # Error, Rhythm), so the render window actually exercises each template.
  "out/notetype-smoke.apkg",
  "out/sight-singing-mvp.apkg",
  "out/transcription-debug-variants.apkg",
  "out/transcription-integration-variants.apkg",
  # The full shipping curriculum: verifies the real deck (all tracks, numbered
  # subdecks, umbrella descriptions) imports cleanly into disposable Anki.
  "out/sight-singing-curriculum.apkg",
  # The dictation deck: verifies the Dictation note type + multi-bar editor
  # (incl. the 5-/6-note stages) imports and renders in disposable Anki.
  "out/dictation-curriculum.apkg",
]
anki_version = "25.09"
docker_image = "sight-singing-deck-anki-workbench"
docker_workbench_spec = "anki-addon-workbench[gui]==0.4.0"
deck_smoke_render_limit = 12

[tool.anki-addon-release]
target = "deck"

[tool.anki-addon-release.ankiweb]
shared_id = "948253022"
listing_file = "release/ankiweb.md"
login_email_env = "ANKIWEB_EMAIL"
login_password_env = "ANKIWEB_PASSWORD"

[tool.anki-addon-release.deck]
source_deck_id_env = "ANKIWEB_SOURCE_DECK_ID_SIGHT_SINGING"
anki_connect_url = "http://127.0.0.1:8766"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"scripts/build_deck.py" = ["E402"]
"scripts/build_curriculum_deck.py" = ["E402"]
"scripts/build_dictation_deck.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
